--- a/playbooks/get_vm_list.yml
+++ b/playbooks/get_vm_list.yml
@@ -2,6 +2,6 @@
 - hosts: localhost
   tasks:
     - name: Get a list of all VirtualMachines
-      redhat.openshift_virtualization.kubevirt_vm_info:
+      kubevirt.core.kubevirt_vm_info:
         namespace: "{{ namespace }}"
       register: vm_list
