--- a/playbooks/get_vm_list.yml
+++ b/playbooks/get_vm_list.yml
@@ -5,3 +5,6 @@
       kubevirt.core.kubevirt_vm_info:
         namespace: "{{ namespace }}"
       register: vm_list
+    - name: Print VMs
+      debug:
+        msg: "{{ vm_list }}"
